# BattleSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  build-examples.bat  build.bat  config.json  convert-file-to-unicode.bat  generate-protos.bat
Config/: ItemConfig.xlsx
Examples/: CMakeLists.txt
Examples/DateTimeTest/: CMakeLists.txt  main.cpp
Examples/GameConfigTest/: CMakeLists.txt  main.cpp
Examples/JSONParserTest/: CMakeLists.txt  main.cpp
Examples/LoggerTest/: CMakeLists.txt  main.cpp
Examples/ProtoParserTest/: CMakeLists.txt  main.cpp
Examples/SingletonTest/: CMakeLists.txt  main.cpp
Examples/UtilitiesTest/: CMakeLists.txt  main.cpp
Include/: BattleConfig.h  Commom.h  Common.h  Forwards.h
Include/App/: Application.h
Include/Battle/: BattleComponentBase.h  BattleDefines.h  ComponentBase.h  DamageComponentBase.h  SkillComponentBase.h  StateComponentBase.h
Include/Common/: ObjectGuid.h  Singleton.h
Include/Common/DateTime/: DateTime.h  TimeUtils.h
Include/Common/GameConfig/: GameConfigParser.h
Include/Common/JSON/: JSONParser.h
Include/Common/Logger/: Logger.h
Include/Common/Math/: MathUtils.h  Vector3.h
Include/Common/Utilities/: ProtoUtils.h  StringUtils.h
Include/Excel/: ExcelParser.h
Include/Filesystem/: FilesystemUtils.h
Include/Network/: AcceptorBase.h  ConnectorBase.h  EventLoop.h
Include/Object/: Object.h  ObjectDefine.h  SceneObject.h
Include/Object/Actor/: Actor.h
Include/Object/Player/: Player.h
Include/Scene/: SceneBase.h
Protos/CPlusPlus/: CMakeLists.txt
Protos/CPlusPlus/Combat/: combat_system.pb.cc  combat_system.pb.h  skills.pb.cc  skills.pb.h
Protos/CPlusPlus/Common/: entities.pb.cc  entities.pb.h  types.pb.cc  types.pb.h
Protos/CPlusPlus/Config/: ItemConfig.pb.cc  ItemConfig.pb.h
Protos/CPlusPlus/Item/: item.pb.cc  item.pb.h
Protos/Combat/: combat_system.proto  skills.proto
Protos/Common/: entities.proto  types.proto
Protos/Config/: ItemConfig.proto
Protos/Item/: item.proto
Src/: convert-file-to-unicode.bat
Src/App/: Application.cpp
Src/Battle/: BattleComponentBase.cpp  DamageComponentBase.cpp  SkillComponentBase.cpp  StateComponentBase.cpp
Src/Common/DateTime/: DateTime.cpp  TimeUtils.cpp
Src/Common/GameConfig/: GameConfigParser.cpp
Src/Common/JSON/: JSONParser.cpp
Src/Common/Logger/: Logger.cpp
Src/Common/Math/: MathUtils.cpp
Src/Common/Utilities/: ProtoUtils.cpp  StringUtils.cpp
Src/Excel/: ExcelParser.cpp
Src/Filesystem/: FilesystemUtils.cpp
Src/Network/: AcceptorBase.cpp  ConnectorBase.cpp  EventLoop.cpp
Src/Object/: Object.cpp  SceneObject.cpp
Src/Object/Actor/: Actor.cpp
Src/Object/Player/: Player.cpp
Tools/: CMakeLists.txt
Tools/GameConfigBuilder/: CMakeLists.txt
